fixed styling of nav bar to align properly on regular size and small screen

--- a/application/client/src/css/global.css
+++ b/application/client/src/css/global.css
@@ -85,57 +85,16 @@ html, body {
     color: #f1356d;
  }
 
- .navbar .links {
-    /* margin-left: auto; */
- }
-
  .navbar a, button {
     margin: 16px;
     text-decoration: none;
     padding: 6px;
  }
 
-
- /*Homepage*/
- /*
- .hero, .feature-background {
-  text-align: center;
-   background-color: rgb(202, 230, 255);
-   /* background: url("../img/Paper Planes.jpg");
-   background-position: -30px -150px; 
-   width: 100%;
-   height:35vh auto;
-   border-radius: 20px;
-   padding: 25px;
-   padding: 0 !important;
-   margin: 0 !important;
- } */
- /*Reusable Components*/
- /*
- .feature-background {
-   background-color: rgb(236, 236, 236);
- } */
-
- /*
-  .featureContent {
-   margin: 50px 30px;
-   padding: 50px;
- }
- */
-
  /*Flex*/
  button {
    margin: 0 10px !important;
  }
-
-/*Search bar*/
-.searchBarContainer {
-  /*
- margin-top: 20px; 
- margin-right: 10em;
- margin-left: 10em;
- */
-}
 
  .searchBarResults {
   margin-top: 20px;
